# cibo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_demo.py  setup.cfg  setup.py
.github/workflows/: main.yml
cibo/: __init__.py  app.py  args.py  blueprint.py  context.py  cors.py  decorators.py  deorators.py  handler.py  openapi.py  types.py  ui_templates.py  utils.py
demo/: __init__.py
demo/auth/: __init__.py
demo/exceptions/: __init__.py
demo/handlers/: __init__.py  echo_handler.py  health_check_handler.py  user_handler.py
requirements/: dev.in  dev.txt  docs.txt  tests.txt  typing.txt
scripts/: coverage.sh  format-all.sh
src/cibo/: __init__.py  app.py  args.py  blueprint.py  handler.py  ui_templates.py  utils.py
tests/: test_args.py
