[metadata]
name = cibo
version = attr: cibo.__version__
url = https://github.com/yangfan9702/cibo
project_urls =
    Source Code = https://github.com/yangfan9702/cibo

license = MIT License
author = yangfan
author_email = yangfan9702@outlook.com
maintainer = yangfan
maintainer_email = yangfan9702@outlook.com
description = A web framework that is composed of flask, pydantic, and openapi 3.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 150

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    cibo
    tests

[coverage:paths]
source =
    src
    */site-packages
